# devflow

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  WORKSTREAM_E_SUMMARY.md  WORKSTREAM_G_SUMMARY.md  devflow.toml  pyproject.toml  pytest.ini
.github/agents/: workstream_a.agent.md  workstream_b.agent.md  workstream_c.agent.md  workstream_d.agent.md  workstream_e.agent.md  workstream_f.agent.md  workstream_g.agent.md  workstream_h.agent.md
.github/workflows/: ci.yml
devflow/: __init__.py  __main__.py  app.py  cli.py
devflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
devflow/commands/: __init__.py  base.py  build.py  completion.py  deps.py  executor.py  publish.py  task.py  task_command.py  test.py  venv.py
devflow/completion/: __init__.py  generator.py
devflow/config/: __init__.py  defaults.py  loader.py  schema.py
devflow/core/: README_GIT.md  __init__.py  git.py  logging.py  paths.py  subprocess.py
devflow/plugins/: __init__.py  interface.py  loader.py
devflow/tests/: __init__.py  test_deps.py  test_integration.py  test_paths.py  test_venv.py  test_workstream_c.py
docs/: COMPLETION.md  COPILOT_PLAN.md  DESIGN_SPEC.md  HELP_EXAMPLES.md  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  TASKS.md  TROUBLESHOOTING.md
examples/: pyproject.toml.example
examples/simple_plugin/: README.md  devflow.toml  my_plugin.py
src/devflow/: app.py  cli.py
src/devflow/commands/: __init__.py  base.py  custom.py
src/devflow/config/: __init__.py  loader.py  schema.py
src/devflow/core/: logging.py  paths.py
tests/: __init__.py  conftest.py  test_app.py  test_base.py  test_cli.py  test_completion.py  test_config.py  test_executor.py  test_git.py  test_integration.py  test_package.py  test_paths.py  test_plugins.py  test_task.py  test_task_command.py
tests/acceptance/: __init__.py  test_scenarios.py
tests/commands/: __init__.py  test_build.py  test_publish.py  test_test.py
tests/fixtures/: __init__.py  sample-config.toml  sample_devflow.toml  sample_pyproject.toml
tests/fixtures/plugins/: __init__.py  bad_import.py  bad_plugin.py  bad_register.py  missing_register.py  no_register.py  sample_hello.py  sample_plugin.py
tests/integration/: __init__.py  test_acceptance.py  test_build_command.py  test_cli.py  test_deps_integration.py  test_help_snapshots.py  test_publish_command.py  test_task_command.py  test_test_command.py  test_venv_integration.py
tests/unit/: __init__.py  test_app.py  test_cli.py  test_command_registry.py  test_completion.py  test_config.py  test_paths.py  test_pipeline_expansion.py  test_plugins.py  test_task_pipeline.py
