# pyproject.toml for devflow
# Core packaging configuration - owned by Workstream H
# Workstream A provides minimal bootstrap for testing

[project]
name = "devflow"
version = "0.1.0"
description = "A Python-Native Project Operations CLI"
readme = "docs/DESIGN_SPEC.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "devflow contributors"}
]
keywords = ["cli", "development", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typer>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
devflow = "devflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501", "B008"]  # B008 is a false positive for Typer's standard pattern

[tool.devflow]
venv_dir = ".venv"
default_python = "python3"
test_runner = "pytest"
