[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devflow"
version = "0.1.0"
description = "A Python-Native Project Operations CLI"
readme = "docs/DESIGN_SPEC.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
devflow = "devflow.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["devflow"]
